Fix the wrong position of license image

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -69,6 +69,8 @@ h1, h2, h3, h2, h5, h6
     height: auto
     display: block
     margin: 0 auto
+    &.not-center
+      display: inline
 
 .post
   pre, code
